Test/5-11_cluster.clu
Cluster size 5
Cluster number 110105       # E:      Factor:7  P:  , Ori size:5    Sub:5    From:11          
   5    11    fam_5_1           1-103      1   leng: 102
   5    11    fam_5_2           1-103      1   leng: 102
   5    11    fam_5_3           1-103      1   leng: 102
   5    11    fam_5_4           1-103      1   leng: 102
   5    11    fam_5_5           1-103      1   leng: 102
